<resources>
    <string name="app_name">NetflixScreenDesign</string>
    <string name="tv_programmes">TV programmes</string>
    <string name="films">Films</string>
    <string name="my_list">My List</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="downloads">Downloads</string>
    <string name="more">More</string>
    <string name="popular_on_netflix">Popular on Netflix</string>
    <string name="trending_now">Trending Now</string>
</resources>